# amfm

./: Cargo.toml  README.md  default.nix  flake.nix
amfm/: Cargo.toml
amfm/src/: config.rs  loading.rs  main.rs  mainscreen.rs  play_screen.rs  radio_info.rs  screens.rs  shortcuts_display.rs  song_queue.rs  stations_table.rs  utils.rs  widgets.rs
amfm/src/screens/: loading.rs  play.rs
antenna/: Cargo.toml
antenna/src/: cache.rs  lib.rs  playback.rs  stations.rs  utils.rs
testclient/: Cargo.toml
testclient/src/: main.rs
