[package]
name = "antenna"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = {version = "2.0.1", features = ["serde"]}
dirs = "6.0.0"
gstreamer = "0.24.3"
reqwest = {version = "0.12.24", features = ["blocking"]}
serde = {version = "1.0.228", features = ["serde_derive"]}
serde_json = "1.0.145"
